# GraphicsA2

./: .gitignore  CMakeLists.txt  README.md
src/: arrow.cpp  arrow.h  bomb.cpp  bomb.h  cannon.cpp  cannon.hpp  color.cpp  cube.cpp  cube.h  fakehuman.cpp  fakehuman.hpp  fuelup.cpp  fuelup.hpp  healthkit.cpp  healthkit.hpp  input.cpp  island.cpp  island.h  main.cpp  main.h  missile.cpp  missile.h  myutils.cpp  myutils.h  nonedit.cpp  objloader.cpp  other_handlers.cpp  parachute.cpp  parachute.h  plane.cpp  plane.h  shader.cpp  smokering.cpp  smokering.hpp  storage.cpp  storage.h  text2D.cpp  texture.cpp  texture.hpp  volcano.cpp  (+1 more)
src/assets/blend/: arrow.blend  arrow.blend1  bomb.blend  bomb.blend1  cannon.blend  cannon.blend1  cannonball.blend  cannonball.blend1  cannonflying.blend  cannonflying.blend1  cannonwheels.blend  cannonwheels.blend1  compass.blend  compass.blend1  fakehuman.blend  fakehuman.blend1  fuelup.blend  fuelup.blend1  healthkit.blend  healthkit.blend1  island.blend  island.blend1  islandlatest.blend  islandlatest.blend1  latest.blend  latest.blend1  missile.blend  missile.blend1  new.blend  new.blend1  parachute.blend  parachute.blend1  rock.blend  rock.blend1  rocket.blend  rocket.blend1  rocket4.blend  rocket4.blend1  smokering.blend  smokering.blend1  (+3 more)
